Update Galaxia.java